--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,17 +17,20 @@ include_directories(include ${catkin_INCLUDE_DIRS}) #${Boost_INCLUDE_DIRS}
 add_executable(mtracker src/mtracker.cpp include/mtracker.h include/serial.h)
 target_link_libraries(mtracker ${catkin_LIBRARIES})
 
+add_executable(simulator src/simulator.cpp include/simulator.h)
+target_link_libraries(simulator ${catkin_LIBRARIES})
+
+add_executable(reference_generator src/reference_generator.cpp include/reference_generator.h include/trajectories.h)
+target_link_libraries(reference_generator ${catkin_LIBRARIES})
+
 add_executable(manual_controller src/manual_controller.cpp include/manual_controller.h)
 target_link_libraries(manual_controller ${catkin_LIBRARIES})
 
 add_executable(automatic_controller src/automatic_controller.cpp include/automatic_controller.h)
 target_link_libraries(automatic_controller ${catkin_LIBRARIES})
 
-add_executable(reference_generator src/reference_generator.cpp include/reference_generator.h include/trajectories.h)
-target_link_libraries(reference_generator ${catkin_LIBRARIES})
-
-add_executable(simulator src/simulator.cpp include/simulator.h)
-target_link_libraries(simulator ${catkin_LIBRARIES})
+add_executable(controls_scaling src/controls_scaling.cpp include/controls_scaling.h)
+target_link_libraries(controls_scaling ${catkin_LIBRARIES})
 
 #add_executable(trajectory_recorder src/trajectory_recorder.cpp include/trajectory_recorder.h)
 #target_link_libraries(trajectory_recorder ${catkin_LIBRARIES} /usr/local/lib/libyaml-cpp.a)
