--- a/package.xml
+++ b/package.xml
@@ -8,9 +8,12 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>geometry_msgs</depend>
-  <depend>std_srvs</depend>
   <depend>tf</depend>
   <depend>joy</depend>
 
