--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
   <depend>joy</depend>
+  <depend>obstacle_detector</depend>
 
   <export>
   </export>
