--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,4 +48,4 @@ target_link_libraries(controls_scaling ${catkin_LIBRARIES})
 add_dependencies(controls_scaling ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 add_executable(data_recorder src/data_recorder.cpp include/data_recorder.h)
-target_link_libraries(data_recorder ${catkin_LIBRARIES} libyaml-cpp.a)
+target_link_libraries(data_recorder ${catkin_LIBRARIES})# libyaml-cpp.a)
