--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
 
   <depend>roscpp</depend>
   <depend>rospy</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
   <depend>joy</depend>
